2011-02-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/pts_tps_map.m v6.4

	- Fix bug. A bad testing condition prevented the computation of
	interpolated points apart from the first one.

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Fix bug, force scaling factor to be a 3-vector so that it can be
	different in each coordinate.

	- Clear memory as it's no longer needed, so that we can process
	bigger images.

	- Add sigma as output argument so that we now how many voxels we
	are using to low-pass filter the image.

2011-02-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README

	- Add entry for img_tps_map

2011-02-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README

	- Add some function names and descriptions that I had forgotten.

	* Add FiltersToolbox/img_tps_map.m

	- IMG_TPS_MAP Warp an image using a thin-plate spline
	transformation

2011-02-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Now the standard deviation necessary to prevent aliasing is
	computed based on proper formulas, instead of guessing. Notes
	about the computations have been added to the help header.

	- Add input argument sigma to force bandwidth of Gaussian filter.

	- Fix bug, the number of rows and columns were swapped, so that
	after reshaping the interpolated intensity vector, the voxels were
	in the wrong place.

2011-01-31  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/pts_tps_weights.m from svn://edison.comlab.ox.ac.uk/ramc/rcasero/matlab-toolbox/pts/trunk/pts_tps_weights.m

	PTS_TPS_WEIGHTS  Compute weights and affine parameters of
	thin-plate spline warp for N-dimensional points

	This function is a dependency that I had forgotten for
	FiltersToolbox/scinrrd_estimate_bias_field.m.

	* Add PointsToolbox/pts_tps_map.m from
	svn://edison.comlab.ox.ac.uk/ramc/rcasero/matlab-toolbox/pts/trunk/pts_tps_map.m

	PTS_TPS_MAP Interpolate/warp/map N-dimensional points using a